# simple-embedded-graphics-menu

./: Cargo.toml  LICENSE  TODO.md
examples/: embedded_menu_example.rs
src/: lib.rs  main.rs
src/items/: action.rs  back_item.rs  checkbox.rs  exit_item.rs  mod.rs  multi_option.rs  section.rs  submenu.rs
src/menu/: menu.rs  menu_item.rs  mod.rs
src/menu/items/: action.rs  back_item.rs  backitem.rs  checkbox.rs  exit_item.rs  mod.rs  multi_option.rs  section.rs  submenu.rs
