[package]
name = "simple-embedded-graphics-menu"
version = "0.1.0"
edition = "2021"

[features]
defmt = ["dep:defmt"]

[dependencies]
embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
trees = { version= "0.4.2", features = ["no_std"] }
defmt = { version = "0.3" , optional = true }

[dev-dependencies]
log = "0.4.22"
embedded-graphics-simulator = "0.7.0"
env_logger = "0.11.5"